--- a/main.css
+++ b/main.css
@@ -28,15 +28,15 @@ font-family: 'Gill Sans';
 
 .center{
     font-family: 'Gill Sans';
-    font-size: 108px;
+    font-size: 100px;
     color: white;
 text-align: center;
-    line-height:95px;
     position: absolute;
   top: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  left: 45%;
+  transform: translate(-40%, -40%);
 }
+
 .container {
   position: relative;
   text-align: center;
@@ -59,13 +59,21 @@ text-align: center;
   text-align: center;
   padding: 10px 20px;
 }
-
+  
 p{
 font-family: 'Gill Sans';
     font-size: 20px;
 color: #f2f2f2;
-
+margin: 20px;
+    text-align: center;
 }
+.p1{
+font-family: 'Gill Sans';
+    font-size: 20px;
+color: #f2f2f2;
+margin: 20px;
+}
+
 .tile{
   margin-left: auto;
   margin-right: auto;
@@ -78,5 +86,58 @@ img{
   margin-right: auto;
   width: 100%;
 }
+.head{
+    font-family: 'Gill Sans';
+    font-size: 100px;
+color: #f2f2f2;
+    font-style: italic;
+    margin-top:40px;
+    text-align: center;
+}
+.subHead{
+    font-family: 'Gill Sans';
+    font-size: 40px;
+color: #f2f2f2;
+    font-style: italic;
+}
+.smallHead{
+    font-family: 'Gill Sans';
+    font-size: 20px;
+color: #f2f2f2;
+    letter-spacing: 2px;
+}
+.column {
+  float: left;
+  width: 31%;
+  padding: 10px;
+}
 
- 
+.column img {
+  margin-top: 12px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/*.imgAbout{
+    float: right;
+    width: 30%;
+    height: 50%;
+margin-left: 10px;
+}
+*/
+figure{
+  width: 80%;
+display: table;
+}
+figcaption{
+    display: table-caption;
+    caption-side: top;
+    font-family: 'Gill Sans';
+    font-size: 50px;
+    font-style: italic;
+    color: #f2f2f2;
+}
