--- a/main.css
+++ b/main.css
@@ -72,6 +72,7 @@ font-family: 'Gill Sans';
     font-size: 20px;
 color: #f2f2f2;
 margin: 20px;
+    margin-top: 40px;
 }
 
 .tile{
@@ -103,7 +104,7 @@ color: #f2f2f2;
     
 }
 .subHead img{
-    margin: 10px;
+    margin: 20px;
     float: right;
 }
 .smallHead{
